Properly styled static pages created and structured as described on Page 3 of Assignment

--- a/EPR_app/app/views/layouts/application.html.erb
+++ b/EPR_app/app/views/layouts/application.html.erb
@@ -19,11 +19,13 @@
         <a class="p-2 text-dark" href="#"> <%=link_to "About Us", '#'%> </a>
         <a class="p-2 text-dark" href="#"> <%=link_to "Contact Us", '#'%> </a>
         <a class="p-2 text-dark" href="#"> <%=link_to "iPhone", '#'%> </a>
-        <a class="p-2 text-dark" href="#"> <%=link_to "iWatch", '#'%> </a>
         <a class="p-2 text-dark" href="#"> <%=link_to "iPad", '#'%> </a>
+        <a class="p-2 text-dark" href="#"> <%=link_to "Apple Watch", '#'%> </a>
       </nav>
     </div>
   </div>
+  <div class = "container">
     <%= yield %>
+  </div>
   </body>
 </html>
