--- a/EPR_app/app/views/static_pages/about.html.erb
+++ b/EPR_app/app/views/static_pages/about.html.erb
@@ -1,2 +1,26 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<div class="container">
+	<h1 class="jumbotron-heading">About Us</h1>
+<div class="container">
+	<div class="row">
+		<div class="col">
+			<p> <b>What We Do</b>
+
+			Here at Electronic Product Review, we are all about consumer reviews. We strive to get the real inside story on the latest Apple products from shoppers like you. Read, write and publish reviews on Electronic Product Review today!</p>
+		</div>
+		<div class="col">
+			<p> <b>Why Do We Do It?</b>
+
+			We believe that having the latest technology is essential. However, with so many different companies on the market, all of which release different products aimed at different audiences, we appreciate it's hard to decide what is the best. By allowing you, the consumer, to post your honest thoughts, we're all helping others to make that all important choice.</p>
+		</div>
+		<div class="col">
+			<p> <b>Legal Jargon</b>
+
+			Please note, we are not affiliated with Apple and everything posted on here by our consumers is honest and, to the best of our knowledge, comes from genuine consumers and not staff at Apple or their friends and family.</p>
+		</div>
+		<div class="col">
+			<p> <b>Feedback</b>
+
+			We welcome any and all feedback. Visit our Contact Us page to get in touch.</p>
+		</div>
+	</div>
+</div>
