--- a/EPR_app/app/views/static_pages/home.html.erb
+++ b/EPR_app/app/views/static_pages/home.html.erb
@@ -3,16 +3,24 @@
 <div class="container">
 	<div class="row">
 		<div class="col">
-			<p> </p>
+			<p> <b>What We Do</b>
+
+			Here at Electronic Product Review, we are all about consumer reviews. We strive to get the real inside story on the latest Apple products from shoppers like you. Read, write and publish reviews on Electronic Product Review today!</p>
 		</div>
 		<div class="col">
-			<p> </p>
+			<p> <b>iPhone</b>
+
+			First launched in June 2007, Apple's iPhone has changed the smartphone market by combining a computer, iPod, digital cameo and mobile phone into one device, with an easy to use touchscreen interface.</p>
 		</div>
 		<div class="col">
-			<p> </p>
+			<p> <b>iPad</b>
+
+			First launched in April 2010, Apple's iPad is a revolutionary tablet computer. Smaller than the typicallaptop, but significantly larger than the average smartphone with all the power and features you'd expect from them both.</p>
 		</div>
 		<div class="col">
-			<p> </p>
+			<p> <b>Apple Watch</b>
+
+			First launched in September 2014, the Apple Watch is a smartwatch that incorporates fitness tracking and health-oriented capabilities with integration with iOS and other Apple products and services.</p>
 		</div>
 	</div>
 </div>
