--- a/EPR_app/app/views/static_pages/contact.html.erb
+++ b/EPR_app/app/views/static_pages/contact.html.erb
@@ -1,2 +1,18 @@
-<h1>StaticPages#contact</h1>
-<p>Find me in app/views/static_pages/contact.html.erb</p>
+<div class="container">
+	<h1 class="jumbotron-heading">Contact Us</h1>
+<div class="container">
+	<div class="row">
+		<div class="col">
+			<p> Test </p>
+		</div>
+		<div class="col">
+			<p> Test </p>
+		</div>
+		<div class="col">
+			<p> Test </p>
+		</div>
+		<div class="col">
+			<p> Test </p>
+		</div>
+	</div>
+</div>
