Amended custom stylesheet implement using Bootswatch

--- a/EPR_app/app/views/static_pages/contact.html.erb
+++ b/EPR_app/app/views/static_pages/contact.html.erb
@@ -3,16 +3,20 @@
 <div class="container">
 	<div class="row">
 		<div class="col">
-			<p> Test </p>
+			<p> <b>Email</b>
+			Please email us at epr@epr.co.uk for any enquiries and complaints. We will aim to respond within 24 hours.</p>
 		</div>
 		<div class="col">
-			<p> Test </p>
+			<p> <b>Phone</b>
+			01142 8745963 </p>
 		</div>
 		<div class="col">
-			<p> Test </p>
+			<p> <b>Twitter</b>
+			@electronicproductreview </p>
 		</div>
 		<div class="col">
-			<p> Test </p>
+			<p> <b>Instagram</b>
+			@eprinsta </p>
 		</div>
 	</div>
 </div>
